--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "heroku": "^7.54.1",
     "mongoose": "^5.12.15",
     "nodemailer": "^6.6.2",
     "nodemon": "^2.0.7"
